--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "@emotion/react": "^11.11.3",
     "@react-three/drei": "9.98",
     "@react-three/fiber": "8.15",
-    "three": "^0.158.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "three": "^0.158.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
