added the search input for searching a friend

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mantine/hooks": "^7.6.1",
     "@react-three/drei": "9.98",
     "@react-three/fiber": "8.15",
+    "@tabler/icons-react": "^2.47.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
