--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@mantine/dropzone": "^7.6.1",
     "@mantine/form": "^7.6.1",
     "@mantine/hooks": "^7.6.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "9.98",
     "@react-three/fiber": "8.15",
     "@tabler/icons-react": "^2.47.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "firebase": "^10.8.1",
     "postcss": "^8.4.35",
@@ -24,6 +27,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.158.0",
     "use-react-router-breadcrumbs": "^4.0.1",
     "web-vitals": "^2.1.4"
