--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mantine/form": "^7.6.1",
     "@mantine/hooks": "^7.6.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "9.98",
     "@react-three/fiber": "8.15",
     "@tabler/icons-react": "^2.47.0",
