--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@react-three/drei": "9.98",
     "@react-three/fiber": "8.15",
     "@tabler/icons-react": "^2.47.0",
@@ -37,6 +39,7 @@
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "short-unique-id": "^5.0.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.158.0",
