--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "compressorjs": "^1.2.1",
     "dayjs": "^1.11.10",
     "firebase": "^10.8.1",
     "html5-qrcode": "^2.3.8",
