--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@react-three/drei": "9.98",
     "@react-three/fiber": "8.15",
+    "@reactour/tour": "^3.6.1",
     "@tabler/icons-react": "^2.47.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
