--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dayjs": "^1.11.10",
     "firebase": "^10.8.1",
     "html5-qrcode": "^2.3.8",
+    "i18next": "^23.11.5",
     "postcss": "^8.4.35",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
@@ -38,6 +39,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-i18next": "^14.1.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
